--- a/Fomulario/cadastro.html
+++ b/Fomulario/cadastro.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/alertas.css">
     <link rel="icon" type="image/x-icon" href="resources/favicon-16x16.png">
     <title>GERENTE DE ALUNOS</title>
 </head>
 
 <body>
+    <div class="alert"></div>
     <div class="box">
         <form>
             <fieldset>
