--- a/Fomulario/cadastro.html
+++ b/Fomulario/cadastro.html
@@ -14,6 +14,7 @@
 <body>
     <div class="alert"></div>
     <div class="box">
+
         <form>
             <fieldset>
                 <legend>CADASTRAR ALUNO</legend>
@@ -52,7 +53,7 @@
                 <input type="radio" id="reprovado" name="resultado" value="REPROVADO" required>
                 <label for="reprovado">REPROVADO</label>
                 <br><br><br>
-                <input type="submit" name="submit" id="btn_cadastrar" class="button" value="CADASTRAR">
+                <input type="button" name="submit" id="btn_cadastrar" class="button" value="CADASTRAR">
                 <input type="button" name="voltar" id="btn_voltar" class="button" value="VOLTAR">
             </fieldset>
 
