--- a/Fomulario/cadastro.html
+++ b/Fomulario/cadastro.html
@@ -30,7 +30,7 @@
                 </div>
                 <br><br>
                 <div class="inputBox">
-                    <input type="number" name="idade" id="idade" class="inputUser" min=0 step=1 required>
+                    <input type="number" name="idade" id="idade" class="inputUser" value="" min=0 step=1 required>
                     <label class="labelInput" for="idade">IDADE</label>
                 </div>
                 <br>
